style.css
/* ... */
.musify__container h1 {
    font-size: 35px;
    font-weight: 700;
    margin-bottom: 40px;
}

.musify__container__items {
    display: flex;
    justify-content: space-around;
}

.musify__container__item {
    display: flex;
    align-items: center;
    gap: 12px;
}

/* offer section */
.offer__container {
    display: flex;
    gap: 180px;
    flex-wrap: wrap;
    justify-content: center;

}

.offer__container__left {
    position: relative;
}

.offer__container__left__circle {
    position: absolute;
    padding: 20px 25px;
    background: #370665;
    box-shadow: 8px 10px 17px 0px #00000040;
    border-radius: 50%;
    top: -9px;
    left: 2px;
    text-align: center;
    font-size: 35px;
    font-weight: 700;
    color: #FFFFFF;
}

.offer__container__left__image {
    width: 400px;
}

.offer__container__right__top p {
    font-size: 65px;
    font-weight: 700;
    margin-bottom: 106px;
}

.offer__container__left__title p {
    font-size: 34px;
    text-align: center;
    margin-bottom: 46px;
    font-weight: 700;
}


.offer__container__right__bottom__time {
    display: flex;
    flex-direction: column;
    gap: 6px;
}

.offer__container__right__bottom p {
    text-align: center;
    font-size: 36px;
    font-weight: 400;
    margin-bottom: 27px;
}

.time__value,
.time__text {
    display: flex;
    gap: 25px;
    justify-content: center;
    align-items: center;
}

.time__value div {
    padding: 20px;
    background-color: #370665;
    font-size: 25px;
    font-weight: 700;
    color: #FAFAFA;
    letter-spacing: 5px;
    border-radius: 32px;
}

.time__text div {
    padding: 5px 20px;
    font-weight: 400;
    font-size: 18px;
}

.offer__container__right__bottom__btns {
    display: flex;
    justify-content: center;
    gap: 12px;
    padding-top: 60px;
}

.view__btn {
    width: 165px;
    height: 55px;
    flex-shrink: 0;
    border: 3px solid #F14A16;
    color: #F14A16;
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    border-radius: 30px;
    background: transparent;
    line-height: normal;
    letter-spacing: 0.72px;
}

.shopnow__btn {
    color: #E5E5E5;
    border-radius: 20px;
    background: #F14A16;
    border: none;
    width: 165px;
    height: 55px;
    flex-shrink: 0;
    font-size: 21px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    letter-spacing: 0.84px;
}


/* Accessories sections */
.accessories__container {
    margin-top: 100px;
    margin-bottom: 100px;
    padding-left: 15px;
    padding-right: 15px;
}

.accessories__container__title {
    text-align: center;
    font-size: 65px;
    font-weight: 700;
    margin-bottom: 100px;
}



.accessories__container__item {
    border-radius: 25px;
    max-width: 720px;
    max-height: 400px;
    border: 2px solid #FFF;
    overflow: hidden;
}

.accessories__container__items {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 40px;
}

.accessories__container__items__top,
.accessories__container__items__bottom {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}

.accessories__container__item img {
    width: 100%;
}

/* Arrival section */
.popular__trend__container__item__color {
    border: 1px solid #35589A;
    background: #370665;
    z-index: 10;
}

/* QR scan style */
.qr__container {
    display: flex;
    justify-content: space-between;
    margin: auto;
    background: linear-gradient(91.42deg, #370665 0%, #35589A 100%);
    padding: 80px 151px;
    border-radius: 25px;
    color: #FFFFFF;
    align-items: center;
    margin-left: 126px;
    margin-right: 126px;
}

.qr__container__right__top h1 {
    font-size: 56px;
    font-weight: 700;
    padding-bottom: 15px;
    text-align: center;
    padding-top: 40px;
}

.qr__container__left__image img {
    width: 200px;
}

.qr__container__right__top p {
    font-size: 32px;
    font-weight: 400;
    padding: 2px 15px 15px 2px;
    text-align: center;
}

.qr__container__right__bottom {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
}

.qr__container__right__bottom img {
    width: 150px;
}

/* footer container style */
.footer__container {
    position: relative;
    margin-top: 80px;
    background-color: #370665;
    padding: 60px 10px 10px 10px;
    padding-bottom: 25px;
}

.footer__container__item__logo {
    position: absolute;
    left: 181px;
    top: 349px;
}

.footer__container__items {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    justify-content: center;
    color: #FFFFFF;
    margin-top: 15px;
}

.footer__container__items li {
    font-weight: 400;
    font-size: 32px;
    list-style-type: none;
    padding: 8px 0px;
}

.footer__container__item__title {
    font-size: 32px;
    font-weight: 700;
    letter-spacing: 0.96px;
    font-family: "proxima_nova_rgbold";
}

.title__name {
    padding: 20px 0px 4px 0px;
}

.footer__container__item__social {
    display: flex;
    align-items: center;
    gap: 20px;
}

.footer__container__item__social li img {
    width: 25px;
}

.footer__container__copyright {
    text-align: center;
    color: white;
    font-size: 21px;
    font-weight: 700;
    letter-spacing: 1px;
    font-family: "proxima_nova_rgbold";
}

.footer__container__newsletter {
    position: absolute;
    top: 713px;
    left: 202px;
}

.footer__container__newsletter p {
    font-size: 18px;
    font-weight: 700;
    font-family: "proxima_nova_rgbold";
    color: white;
    margin-bottom: 14px;
}

.footer__container__newsletter__item__input {
    border: 2px solid #F14A16;
    color: #FFFFFF80;
    padding: 9px 50px 9px 19px;
    border-radius: 30px;
    background-color: transparent;
}

.footer__container__newsletter__item__subscribe {
    background-color: #F14A16;
    border-radius: 20px;
    border: none;
    padding: 9px 50px;
    font-weight: 700;
    color: white;
    font-size: 16px;
}
/* ... */

